CFLAGS = -Wall -std=gnu11 -O2 -g
LDFLAGS =

bin_PROGRAMS = bison++
bison___SOURCES = allocate.c bison.h closure.c conflict.c derives.c \
				  files.c files.h getargs.c gram.c gram.h lalr.c lex.c lex.h \
				  lr0.c machine.h main.c new.h nullable.c output.c print.c \
				  reader.c reduce.c state.h symtab.c symtab.h system.h \
				  types.h version.c warshall.c
